Readme § Intro: Clarify statuses of additional features

--- a/spec.html
+++ b/spec.html
@@ -255,7 +255,6 @@ Establish the immutable topic binding (that is, the `#` binding) of this Environ
 </emu-clause>
 </emu-clause>
 </emu-clause>
-</emu-clause>
 
 <emu-clause id=sec-ecmascript-language-lexical-grammar>
 <h1>ECMAScript Language: Lexical Grammar</h1>
@@ -414,7 +413,7 @@ PipelineTopicBody[In, Yield, Await] :
 </emu-grammar>
 
 <h2>Supplemental Syntax</h2>
-<p>When the production <emu-grammar>PipelineHead : ConditionalExpression</emu-grammar> is recognized the following grammar is used to refine the interpretation of |ConditionalExpression|:
+<p>When the production <emu-grammar>PipelineHead : ConditionalExpression</emu-grammar> is recognized the following grammar is used to refine the interpretation of |ConditionalExpression|:</p>
 
 <emu-grammar type=definition>
 PipelineTopicListHead[In, Yield, Await] :
