Spec: Added other additional features, noted that they are not at Stage 0

--- a/spec.html
+++ b/spec.html
@@ -1,7 +1,7 @@
 <pre class=metadata>
 title: Smart Pipelines
 status: proposal
-stage: −1
+stage: 0
 location: https://github.com/js-choi/proposal-smart-pipelines
 copyright: false
 contributors: J. S. Choi
@@ -11,7 +11,7 @@ contributors: J. S. Choi
 
 <emu-intro id=introduction>
 <h1>Introduction</h1>
-<p>This is the formal specification for a proposed "smart pipeline operator" <code>|&gt;</code> in JavaScript. It modifies the original <a href=https://tc39.github.io/ecma262/>ECMAScript specification</a> with several new or revised clauses. See <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>the proposal's explainer</a> for the proposal's background, motivation, usage examples, explanation, and information on planned add-on proposals.</p>
+<p>This is the formal specification for a proposed "smart pipeline operator" <code>|&gt;</code> in JavaScript. It modifies the original <a href=https://tc39.github.io/ecma262/>ECMAScript specification</a> with several new or revised clauses. The <strong>Core Proposal</strong> is at Stage 0. Additional Features are given as annexes; none of the Additional Features are at a TC39-proposal stage. See <a href=https://github.com/js-choi/proposal-smart-pipelines/blob/master/readme.md>the proposal's explainer</a> for the proposal's background, motivation, usage examples, explanation, and information on planned add-on proposals.</p>
 </emu-intro>
 
 <emu-clause id=executable-code-and-execution-contexts>
@@ -873,9 +873,21 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 </emu-clause>
 
+<emu-annex id=sec-additional-feature-bp>
+<h1>Additional Feature BP</h1>
+<p><strong>Not at Stage 0.</strong></p>
+<p>[TODO]</p>
+</emu-annex>
+
+<emu-annex id=sec-additional-feature-pp>
+<h1>Additional Feature PP</h1>
+<p><strong>Not at Stage 0.</strong></p>
+<p>[TODO]</p>
+</emu-annex>
+
 <emu-annex id=sec-additional-feature-pf>
 <h1>Additional Feature PF</h1>
-
+<p><strong>Not at Stage 0.</strong></p>
 <p>This annex specifies additional ECMAScript language syntax and semantics for <strong>pipeline functions</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing an additional <strong>pipeline-function operator</strong> `+&gt;`. This new <strong>unary</strong> operator creates arrow functions with an implicit parameter pipelined into a pipeline body, such that `+&gt;` |PipelineBody| is equivalent to `$=&gt;$|&gt;` |PipelineBody|. The operator brings much power: it enables terse <strong>method extraction</strong>, terse <strong>partial application</strong> of functions/expressions (into unary functions), and terse <strong>composition</strong> of functions/expressions.</p>
 
 <p><strong>This annex is unfinished.</strong> Async pipeline functions are yet to be added.</p>
@@ -1167,8 +1179,15 @@ PipelineBody : PipelineTopicBody
 
 </emu-annex>
 
+<emu-annex id=sec-additional-feature-tc>
+<h1>Additional Feature TC</h1>
+<p><strong>Not at Stage 0.</strong></p>
+<p>[TODO]</p>
+</emu-annex>
+
 <emu-annex id=sec-additional-feature-np>
 <h1>Additional Feature NP</h1>
+<p><strong>Not at Stage 0.</strong></p>
 <p>This annex specifies additional ECMAScript language syntax and semantics for <strong>n-ary smart pipelines</strong> and <strong>multiple lexical topics</strong>. It amends the <emu-xref href=#introduction>core proposal</emu-xref> by introducing n-ary pipeline forms `headList |> …` and `… |> bodyList |> …`, an additional secondary topic reference `##`, a tertiary topic reference `###`, a |RestTopicReference| `...`, and a parenthesized pipeline-head syntax to bind the new references [TODO: xref]. When combined with the <emu-xref href=#sec-additional-feature-pf>additional feature PF</emu-xref>, the resulting additional feature PF+NP enables <strong>partial application</strong> of functions/expressions into n-ary functions. [TODO: xref with PF+NP]</p>
 
 <p><strong>This annex is unfinished.</strong></p>
@@ -2295,4 +2314,10 @@ Normally, Contains does not look inside most function forms. However, Contains i
 
 </emu-annex>
 
+</emu-annex>
+
+<emu-annex id=sec-additional-feature-tf>
+<h1>Additional Feature TF</h1>
+<p><strong>Not at Stage 0.</strong></p>
+<p>[TODO]</p>
 </emu-annex>
