Spec: Added PipelineBareAwaitedFunctionCall

--- a/spec.html
+++ b/spec.html
@@ -397,6 +397,7 @@ PipelineHead[?In, ?Yield, ?Await] :
 PipelineBody[In, Yield, Await] :
   PipelineBareFunctionCall
   PipelineBareConstructorCall
+  PipelineBareAwaitedFunctionCall[?Await]
   PipelineTopicBody[?In, ?Yield, ?Await]
 
 PipelineBareFunctionCall :
@@ -404,6 +405,9 @@ PipelineBareFunctionCall :
 
 PipelineBareConstructorCall :
   `new` SimpleReference
+
+PipelineBareAwaitedFunctionCall[Await] :
+  [+Await] `await` SimpleReference
 
 SimpleReference :
   IdentifierReference
@@ -425,6 +429,10 @@ PipelineTopicList[In, Yield, Await] :
   PipelineTopicList[?In, ?Yield, ?Await] `,` AssignmentExpression[?In, ?Yield, ?Await]
   AssignmentExpression[?In, ?Yield, ?Await]
 </emu-grammar>
+
+<emu-note type=editor>
+<p>The supplemental grammar is intended to ensure forward compatibility with <emu-xref href=#sec-additional-feature-np-pipeline-operator>further modifications by Additional Feature NP</emu-xref>.</p>
+</emu-note>
 
 <emu-clause id=sec-pipeline-operator-static-semantics-early-errors>
 <h1>Static Semantics: Early Errors</h1>
@@ -517,6 +525,15 @@ PipelineTopicList[In, Yield, Await] :
 <emu-alg>
 1. Let _constructExpr_ be the |NewExpression| that is covered by _SimpleReference_.
 2. Return ? EvaluateNew(NewExpression, _headValues_).
+</emu-alg>
+
+<emu-grammar>PipelineBareAwaitedFunctionCall : `await` SimpleReference</emu-grammar>
+<p>This algorithm is an altered version of the algorithm of <emu-xref href="#sec-function-calls-runtime-semantics-evaluation">Function Calls, Runtime Semantics: Evaluation</emu-xref>, modified as follows:</p>
+<emu-alg>
+1. Let _asyncFunctionExpr_ be the |MemberExpression| that is covered by _SimpleReference_.
+2. Let _exprRef_ be the result of evaluating _asyncFunctionExpr_.
+3. Let _value_ be ? GetValue(_exprRef_).
+4. Return ? Await(_value_).
 </emu-alg>
 
 <emu-grammar>PipelineTopicBody : AssignmentExpression</emu-grammar>
