Spec § Lexical Environs: Correct type of [[TopicValues]]

--- a/spec.html
+++ b/spec.html
@@ -117,7 +117,7 @@ If [[TopicBindingStatus]]'s value is *true*, the Environment Record binds the En
 [[TopicValues]]
 </td>
 <td>
-Any | ~empty~
+List of any | ~empty~
 </td>
 <td>
 If the value of [[TopicBindingStatus]] is *true*, [[TopicValues]] is a list containing the one element which is the environment's topic value (that is, the value of `#` within its program scope). Otherwise, the value of [[TopicValues]] is ~empty~.
